@@ -1,123 +1,0 @@
-#!/bin/sh
-#
-#
-
-prefix=@XINE_CONFIG_PREFIX@
-exec_prefix=@exec_prefix@
-exec_prefix_set=no
-
-usage()
-{
-	cat <<EOF
-Usage: xine-config [OPTIONS] [LIBRARIES]
-Options:
-	[--prefix[=DIR]]
-	[--exec-prefix[=DIR]]
-	[--version]
-        [--libs]
-	[--acflags]
-	[--cflags]
-	[--plugindir]
-	[--datadir]
-	[--scriptdir]
-	[--localedir]
-	[--objcflags]
-EOF
-	exit $1
-}
-
-if test $# -eq 0; then
-	usage 1 1>&2
-fi
-
-while test $# -gt 0; do
-  case "$1" in
-  -*=*) optarg=`echo "$1" | sed 's/[-_a-zA-Z0-9]*=//'` ;;
-  *) optarg= ;;
-  esac
-
-  case $1 in
-    --prefix=*)
-      prefix=$optarg
-      if test $exec_prefix_set = no ; then
-        exec_prefix=$optarg
-      fi
-      ;;
-    --prefix)
-      echo_prefix=yes
-      ;;
-    --exec-prefix=*)
-      exec_prefix=$optarg
-      exec_prefix_set=yes
-      ;;
-    --exec-prefix)
-      echo_exec_prefix=yes
-      ;;
-    --version)
-      echo @XINE_MAJOR@.@XINE_MINOR@.@XINE_SUB@
-      ;;
-    --acflags)
-      echo_acflags=yes
-      ;;
-    --cflags)
-      echo_cflags=yes
-      ;;
-    --libs)
-      echo_libs=yes
-      ;;
-    --plugindir)
-      echo_plugindir=yes
-      ;;
-    --datadir)
-      echo_datadir=yes
-      ;;
-    --scriptdir)
-      echo_scriptdir=yes
-      ;;
-    --localedir)
-      echo_localedir=yes
-      ;;
-    --objcflags)
-      echo_objcflags=yes
-      ;;
-    *)
-      usage 1 1>&2
-      ;;
-  esac
-  shift
-done
-
-if test "$echo_prefix" = "yes"; then
-	echo $prefix
-fi
-
-if test "$echo_exec_prefix" = "yes"; then
-	echo $exec_prefix
-fi
-
-if test "$echo_acflags" = "yes"; then
-      echo "@XINE_ACFLAGS@"
-fi
-
-if test "$echo_cflags" = "yes"; then
-      echo -I@includedir@ @PTHREAD_CFLAGS@
-fi
-
-if test "$echo_libs" = "yes"; then
-      echo -L@libdir@ -lxine @ZLIB_LIBS@ @NET_LIBS@ @PTHREAD_LIBS@ @LIBICONV@ @RT_LIBS@
-fi      
-if test "$echo_plugindir" = "yes"; then
-      echo "@XINE_PLUGINPATH@"
-fi      
-if test "$echo_datadir" = "yes"; then
-      echo "@XINE_DATADIR@"
-fi      
-if test "$echo_scriptdir" = "yes"; then
-      echo "@XINE_SCRIPTPATH@"
-fi
-if test "$echo_localedir" = "yes"; then
-      echo "@XINE_LOCALEPATH@"
-fi
-if test "$echo_objcflags" = "yes"; then
-      echo "@OBJCFLAGS@"
-fi
